# nicescholia

./: 404.html  AGENTS.md  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: build.yml
nscholia/: backend.py  backend_dashboard.py  cmd.py  dashboard.py  endpoint_dashboard.py  endpoints.py  examples_dashboard.py  examples_dashboard_chatgpt.py  examples_dashboard_claude.py  examples_dashboard_gemini.py  examples_dashboard_grok4.py  google_sheet.py  monitor.py  version.py  webserver.py
nscholia_examples/: dashboard_queries.yaml
rdd/ScholiaAuthorWalk-Q80/: RDD.md  ScholiaAuthorWalk-Q80-transcript.txt
search/: search_index.json
tests/: test_backends.py  test_endpoints.py  test_examples.py  test_webserver.py
